<resources>
    <string name="app_name">Chair App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="StartTime">Start</string>
    <string name="EndTime">End</string>
    <string name="Reserve">Reserve</string>
    <string name="CurrentReservations">Current Reservations</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="welcome_message">The Broken Engineers\nSmart Chair Network</string>
    <string name="chair_page_title">Select A Chair</string>
    <string name="chair_one">1</string>
    <string name="chair_two">2</string>
    <string name="chair_three">3</string>
    <string name="chair_four">4</string>
    <string name="chair_five">5</string>
    <string name="enter">enter</string>
    <string name="chair_reservation">Chair: Reservation:</string>
    <string name="Admin">Admin</string>
    <string name="add_chair">Add Chair</string>
    <string name="enterAdmin">Admin Login</string>
    <string name="find_a_chair">Find a Chair</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
    <string name="get_value">Get Value</string>
    <string name="weight">Weight</string>
    <string name="nothing" />
    <string name="select_time">Select Time</string>
    <string name="occupied">Occupied</string>
    <string name="not_occupied">Not Occupied</string>

</resources>