<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="60dp"
        android:text="@string/StartTime"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/EndTime"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_endTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/hawkeye_gold"
        android:text="@string/Reserve"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_endTime" />

    <TextView
        android:id="@+id/textview_third"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:layout_marginTop="85dp"
        android:text="@string/CurrentReservations"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_marginTop="75dp"
        android:onClick="popTimePicker"
        android:text="@string/select_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_first"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_endTime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:onClick="popTimePicker"
        android:text="@string/select_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_second"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:background="#808080"
        android:text="@string/chair_reservation"
        android:textAllCaps="true"
        android:textColor="#263238"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_third"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>