<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.chairapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_Admin"
            app:destination="@id/Admin"

            />



    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.chairapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_Reserve"
            app:destination="@id/Reserve" />


    </fragment>

    <fragment
        android:id="@+id/Reserve"
        android:name="com.example.chairapp.Reserve"
        android:label="@string/Reserve"
        tools:layout="@layout/reserve">

        <action
            android:id="@+id/action_Reserve_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>

    <fragment
        android:id="@+id/Admin"
        android:name="com.example.chairapp.Admin"
        android:label="@string/Admin"
        tools:layout="@layout/reserve">

        <action
            android:id="@+id/action_Admin_to_FirstFragment"
            app:destination="@id/FirstFragment" />


    </fragment>


</navigation>